--- a/todo/package.json
+++ b/todo/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "npm run build && gh-pages --branch gh-pages --repo https://github.com/fuga296/my-repo.git --dist dist --dest sample-apps/todo"
   },
   "dependencies": {
